Basic implementation: Conclusion, completion of tests and movement mechanics of the player bot