@@ -22,7 +22,25 @@ public class TrackTest {
      */
     @BeforeEach
     public void setUp() throws IOException {
-        track = new Track(10, 10, "C:\\Users\\giuli\\OneDrive\\Desktop\\configTest.txt");
+
+        track = new Track(10, 10, "configTest.txt");
+
+    }
+
+    /**
+     * Verifica che la griglia è stata costruita correttamente.
+     */
+    @Test
+    public void testCostructionGrid() {
+
+        List<List<Cell>> grid = track.getGrid();
+
+        for (int y = 0; y < 10; y++) {
+            for (int x = 0; x < 10; x++) {
+                assertEquals(grid.get(y).get(x).getX(), x, "una cella ha la coordinata X sbagliata");
+                assertEquals(grid.get(y).get(x).getY(), y, "una cella ha la coordinata Y sbagliata");
+            }
+        }
     }
 
     /**
@@ -30,7 +48,8 @@ public class TrackTest {
      */
     @Test
     public void testAddStartLine() {
-        Cell startCell = new Cell(1, 1, true, false, true);
+
+        Cell startCell = track.getCellAt(1, 1);
         track.addStartLine(startCell);
         assertEquals(2, track.getStartLine().size(), "Dovrebbero esserci 2 celle nella linea di partenza");
         assertEquals(startCell, track.getStartLine().get(1), "La cella aggiunta alla linea di partenza non corrisponde");
@@ -41,10 +60,12 @@ public class TrackTest {
      */
     @Test
     public void testAddFinishLine() {
-        Cell finishCell = new Cell(5, 5, false, true, true);
+
+        Cell finishCell = track.getCellAt(5, 5);
         track.addFinishLine(finishCell);
         assertEquals(2, track.getFinishLine().size(), "Dovrebbe esserci 1 cella nella linea di arrivo");
         assertEquals(finishCell, track.getFinishLine().get(1), "La cella aggiunta alla linea di arrivo non corrisponde");
+
     }
 
 
@@ -54,9 +75,11 @@ public class TrackTest {
      */
     @Test
     public void testGetGrid() {
+
         List<List<Cell>> grid = track.getGrid();
-        assertEquals(10, grid.size(), "La griglia dovrebbe avere 10 righe");
-        assertEquals(10, grid.get(0).size(), "La griglia dovrebbe avere 10 colonne per ogni riga");
+        assertEquals(10, grid.size(), "La griglia dovrebbe avere 10 colonne");
+        assertEquals(10, grid.getFirst().size(), "La griglia dovrebbe avere 10 righe per ogni colonna");
+
     }
 
     /**
@@ -65,10 +88,11 @@ public class TrackTest {
      */
     @Test
     public void testGetStartLine() {
+
         List<Cell> startLine = track.getStartLine();
-        assertEquals(1, startLine.size(), "La linea di partenza dovrebbe contenere 1 cella");
-        assertEquals(0, startLine.get(0).getX(), "la cella di partenza dovrebbe avere come X : 0");
-        assertEquals(0, startLine.get(0).getY(), "la cella di partenza dovrebbe avere come Y : 0");
+        assertEquals(1, startLine.size(), "La linea di arrivo dovrebbe contenere 1 cella");
+        assertEquals(0, startLine.getFirst().getX(), "la cella di fine dovrebbe avere come X : 4");
+        assertEquals(0, startLine.getFirst().getY(), "la cella di fine dovrebbe avere come Y : 4");
     }
 
     /**
@@ -77,10 +101,11 @@ public class TrackTest {
      */
     @Test
     public void testGetFinishLine() {
+
         List<Cell> finishLine = track.getFinishLine();
         assertEquals(1, finishLine.size(), "La linea di arrivo dovrebbe contenere 1 cella");
-        assertEquals(4, finishLine.get(0).getX(), "la cella di arrivo dovrebbe avere come X : 4");
-        assertEquals(4, finishLine.get(0).getY(), "la cella di arrivo dovrebbe avere come Y : 4");
+        assertEquals(4, finishLine.getFirst().getX(), "la cella di arrivo dovrebbe avere come X : 4");
+        assertEquals(4, finishLine.getFirst().getY(), "la cella di arrivo dovrebbe avere come Y : 4");
 
     }
 
@@ -90,6 +115,7 @@ public class TrackTest {
      */
     @Test
     public void testGetCellAt() {
+
         Cell cell = track.getCellAt(0, 0);
         assertNotNull(cell, "La cella alle coordinate (0, 0) non dovrebbe essere null");
         assertEquals(0, cell.getX(), "La coordinata X della cella dovrebbe essere 0");
@@ -102,20 +128,18 @@ public class TrackTest {
      */
     @Test
     public void testAddPlayer() {
+
         BotPlayer player2 = new BotPlayer("Luca", new Cell(1, 0, true, false, true));
-        track.addPlayer(player2);
+        track.getPlayers().add(player2);
         assertEquals(2, track.getPlayers().size(), "Dovrebbero esserci 2 giocatori nella lista");
         assertEquals("Luca", track.getPlayers().get(1).getName(), "Il secondo player aggiunto dovrebbe essere Luca");
     }
 
     @Test
-    /**
-     * Test per il metodo getPlayers.
-     * Verifica che vengano restituiti tutti i giocatori.
-     */
     public void testGetPlayers() {
+
         assertEquals(1, track.getPlayers().size(), "Dovrebbe esserci un solo giocatore definito tramite file");
-        assertEquals("Andrea", track.getPlayers().get(0).getName(), "Il nome del giocatore dovrebbe essere Andrea");
+        assertEquals("Andrea", track.getPlayers().getFirst().getName(), "Il nome del giocatore dovrebbe essere Andrea");
     }
 
     /**
@@ -124,6 +148,7 @@ public class TrackTest {
      */
     @Test
     public void testIsCellOccupiedByPlayer() {
+
         assertTrue(track.isCellOccupiedByPlayer(0, 0), "La cella (0, 0) dovrebbe essere occupata dal giocatore");
         assertFalse(track.isCellOccupiedByPlayer(1, 1), "La cella (1, 1) non dovrebbe essere occupata da nessun giocatore");
     }
@@ -134,9 +159,11 @@ public class TrackTest {
      */
     @Test
     public void testGetPlayerAtCell() {
+
         Player retrievedPlayer = track.getPlayerAtCell(0, 0);
         assertNotNull(retrievedPlayer, "Dovrebbe esserci un giocatore alla cella (0, 0)");
         assertEquals("Andrea", retrievedPlayer.getName(), "Il giocatore alla cella (0, 0) dovrebbe essere il giocatore Andrea, aggiunto dal file");
+
     }
 
     /**
